--- a/kadai_008/kadai_008.html
+++ b/kadai_008/kadai_008.html
@@ -47,18 +47,15 @@
                     <br>
 
                     <label>おすすめの和菓子と名称</label>
-                    <input type="text">
-                    <br>
+                    <input type="text" placeholder="例：みたらし団子">
                     <br>
 
                     <label>おすすめする理由</label>
                     <textarea></textarea>
                     <br>
-                    <br>
             
                     <label>個人情報保護方針に同意する</label>
                     <input type="checkbox">
-                    <br>
                     <br>
             
                     <input type="submit" value="送信">
